--- a/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/SQLHisAlarm/HisAlarmPage.razor
+++ b/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/SQLHisAlarm/HisAlarmPage.razor
@@ -13,7 +13,7 @@
 <AdminTable TItem="HistoryAlarm" AutoGenerateColumns="true" ShowDefaultButtons=false
             AllowResizing="true" IsFixedHeader=true IsMultipleSelect=false
             ShowExtendEditButton=false ShowExtendDeleteButton=false ShowExtendButtons=false
-            ShowExportButton="true"
+            ShowExportButton="true" IsAutoQueryFirstRender=false
             OnQueryAsync="OnQueryAsync" IsPagination=true CustomerSearchModel="@CustomerSearchModel">
     <CustomerSearchTemplate>
         @if (context is HistoryAlarmPageInput model)
