--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
@@ -13,7 +13,7 @@
                 AllowResizing="true" IsFixedHeader=true IsMultipleSelect=true SearchModel=SearchModel
                 ShowExtendButtons=true ShowExportButton
                 ShowDefaultButtons=true ExtendButtonColumnWidth=150
-                OnQueryAsync="OnQueryAsync" IsPagination=true
+                OnQueryAsync="OnQueryAsync" IsPagination=false
                 OnSaveAsync="Save" OnDeleteAsync="Delete">
 
         <TableColumns>
