--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
@@ -39,7 +39,7 @@
 
     }
 
-    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugPage ></AdapterDebugComponent>
+    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugComponent ></AdapterDebugComponent>
 </div>
 
 
