--- a/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusMaster.razor
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusMaster.razor
@@ -37,7 +37,7 @@
 
     }
 
-    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugPage ></AdapterDebugComponent>
+    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugComponent ></AdapterDebugComponent>
 </div>
 
 
