--- a/src/adapter/ThingsGateway.Plugin.OpcDa/_Imports.razor
+++ b/src/adapter/ThingsGateway.Plugin.OpcDa/_Imports.razor
@@ -5,11 +5,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorComponent
-@using Masa.Blazor
-@using Masa.Blazor.Presets
-@using ThingsGateway.Components;
-@using ThingsGateway.Core;
+@using ThingsGateway.Razor
+@using ThingsGateway.Core
 @using System.Net.Http.Json
-@using System.IO;
+@using System.IO
 @using System.Text.Json;
