--- a/src/ThingsGateway.Admin.Razor/Pages/Role/GrantUserComponent.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/Role/GrantUserComponent.razor
@@ -24,7 +24,7 @@
     <div class="col-12  col-md-6" style="height:100%">
 
         <AdminTable @ref="table2" TItem="UserSelectorOutput" AutoGenerateColumns="true" @bind-SelectedRows="@SelectedDeleteRows" ClickToSelect="true"
-                    ShowToolbar="true" ShowDefaultButtons="false" IsMultipleSelect="true" ShowAdvancedSearch=false ShowResetButton=false PageItems=20
+                    ShowToolbar="true" ShowDefaultButtons="false" IsMultipleSelect="true" ShowAdvancedSearch=false ShowResetButton=false
                     ShowCardView=false ShowColumnList=false ShowSearch=false ShowRefresh=false ScrollMode=ScrollMode.Virtual Items=SelectedRows
                     IsPagination=false>
             <TableToolbarTemplate>
