--- a/src/ThingsGateway.Admin.Razor/Pages/User/GrantRoleComponent.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/User/GrantRoleComponent.razor
@@ -9,7 +9,7 @@
 
         <AdminTable @ref="table1" TItem="SysRole" AutoGenerateColumns="true" @bind-SelectedRows="@SelectedAddRows" ClickToSelect="true" 
                     ShowToolbar="true" ShowDefaultButtons="false" IsMultipleSelect="true" ShowAdvancedSearch=false ShowResetButton=false
-                    ShowCardView=false ShowColumnList=false ScrollMode=ScrollMode.Virtual PageItems=20
+                    ShowCardView=false ShowColumnList=false ScrollMode=ScrollMode.Virtual
                     OnQueryAsync="OnQueryAsync" IsPagination=false>
             <TableToolbarTemplate>
                 <TableToolbarButton TItem="SysRole" Color="Color.Info" Icon="fa-solid fa-users-gear" Text="@DefaultLocalizer["Add"]"
@@ -24,7 +24,7 @@
     <div class="col-12  col-md-6" style="height:100%">
 
         <AdminTable @ref="table2" TItem="SysRole" AutoGenerateColumns="true" @bind-SelectedRows="@SelectedDeleteRows" ClickToSelect="true" 
-                    ShowToolbar="true" ShowDefaultButtons="false" IsMultipleSelect="true" ShowAdvancedSearch=false ShowResetButton=false PageItems=20
+                    ShowToolbar="true" ShowDefaultButtons="false" IsMultipleSelect="true" ShowAdvancedSearch=false ShowResetButton=false
                     ShowCardView=false ShowColumnList=false ShowSearch=false ShowRefresh=false ScrollMode=ScrollMode.Virtual Items=SelectedRows
                     IsPagination=false>
             <TableToolbarTemplate>
